--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.0",
+    "scrollmagic": "^2.0.8",
     "scrollreveal": "^4.0.9",
     "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
